Changed max-width of entire site from 1400px to 100%. Fixed some positioning on smaller devices

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -44,6 +44,9 @@
 * {
     box-sizing: border-box;
   }
+.row {
+  margin: 0;
+}
 
 .row:before,
 .row:after {
@@ -57,11 +60,11 @@
 
   body {
     margin: 0 auto;
+    padding: 0;
   }
 
   .container {  
     width: 100%;
-    max-width: 1400px;
     margin: 0 auto;
   }
  
@@ -71,12 +74,10 @@
     background-size: cover;
     height: 701px;
     width: 100%;
-    max-width: 1400px;
     margin:0 auto;
   }
 
   .navbar-fixed-top {
-    max-width: 1400px;
     text-align: center;
     margin: 0 auto;
   }
@@ -131,7 +132,6 @@
 
   .services {
     height: 568px;
-    max-width: 1400px;
     margin: 0 auto;
     h1 {
       color: $black;
@@ -173,26 +173,27 @@
     button {
       margin-top: 80px;
       margin-bottom: -20px;
-      width: 68px;
-      height: 67px;
+      width: 120px;
+      height: 120px;
       border: 3px solid $Yellow;
       background-color: $White;
       border-radius: 50%;
+      color: $Yellow;
       &:hover {
         transform: scale(1.1);
         transition: 0.5s;
         cursor: pointer;
+        color: $White;
+        background-color: $Yellow;
       }
       .fa {
-        color: $Yellow;
-        font-size: 35px;
+        font-size: 45px;
       }
     }
   }
 
 .portfolio {
   height: 1130px;
-  max-width: 1400px;
   background-color: #f7f7f7;
   margin: 0 auto;
   .portfolio-header {
@@ -262,7 +263,6 @@
 .About-us {
   text-align: center;
   height: 1350px;
-  max-width: 1400px;
   margin: 0 auto;
   h1 {
     color: $black;
@@ -356,7 +356,6 @@
 .staff {
     text-align: center;
     height: 669px;
-    max-width: 1400px;
     margin: 0 auto;
     background-color: #f9f9f9;
     .section-title h1 {
@@ -411,7 +410,6 @@
     background-image: url("../images/123.jpg");
     background-repeat: no-repeat;
     height: 679px;
-    max-width: 1400px;
     width: 100%;
     background-size: 60% 70%;
     background-position: bottom right;
@@ -463,7 +461,6 @@ input[type=submit] {
 }
 
 .copyrights {
-  max-width: 1400px;
   margin: 0 auto;
   .footer {
     p {
@@ -495,7 +492,7 @@ input[type=submit] {
 }
 
 @media (max-width: 768px)  {
-  
+
   .nav, .navbar, .navbar-form {
     background-color: #F8F8F8;
     margin-top: 0;
@@ -548,7 +545,7 @@ input[type=submit] {
 
   .portfolio {
     margin: 0 auto;
-    height: 2650px;
+    height: 2200px;
     .wrap {
       float: none;
       display: block;
@@ -564,9 +561,13 @@ input[type=submit] {
       display: block;
       margin: 0 auto;
     }
+    img {
+      width: 200px;
+      height: 200px;
+    }
   }
 
-  .About-us {
+.About-us {
   height: 1300px;
   h1 {
     font-size: 35px;
@@ -582,7 +583,7 @@ input[type=submit] {
   text-align: center;
 }
 
-  .staff {
+.staff {
   height: 1450px;
   .section-title {
     width: 100%;
